feat: [CHK-4223] upgrade java version to 21 (#218)
* chore(gradle): [CHK-4223] update buildDir deprecation

* chore(gradle): [CHK-4223] upgrade gradle to 8.5

* chore(gradle): [CHK-4223] upgrade gradle and deps for java21

* chore(gradle): [CHK-4223] update buildDir deprecation

* chore(gradle): [CHK-4223] specify deps and format code

* chore(gradle): [CHK-4223] remove preview flags

* chore(gradle): [CHK-4223] update dockerfile, scripts and verifications

* chore(gradle): [CHK-4223] update commons version

* chore(commons): [CHK-4223] refactor after commons java 21 upgrade

* chore(gradle): [CHK-4223] upgrade gradle and deps versions

* chore(deps): [CHK-4223] upgrade sonarqube

* chore(deps): [CHK-4223] upgrade commons gradle task

* chore(deps): [CHK-4223] upgrade lockfile

* chore(deps): [CHK-4223] update checksums

* chore(deps): [CHK-4223] update checksums

* chore(deps): [CHK-4223] update checksums for pipeline

* chore(deps): [CHK-4223] update checksums for pipeline

* chore(deps): [CHK-4223] update checksums for pipeline

* chore(deps): [CHK-4223] update checksums for pipeline

* chore(deps): [CHK-4223] refresh deps

* chore(deps): [CHK-4223] add trusted sources

* feat(pipeline): [CHK-4223] separate commons and main build steps

* chore(gradle): [CHK-4223] remove kotlin:S6624 warnings

* chore(docker): [CHK-4223] pin versions and add restore deps verification

* chore(kotlin): [CHK-4223] upgrade to 2.1.20

* chore(spotless): [CHK-4223] run new spotlessApply task

* chore(deps): [CHK-4223] update verification file

* chore(deps): [CHK-4223] update verification file for pipeline

* chore(deps): [CHK-4223] add trusted sources for pipeline

* chore(gradle): [CHK-4223] fix pipeline warnings

* chore(deps): [CHK-4223] update verification file for pipeline

* chore(commons): [CHK-4223] update commons version ref after merge

* chore(commons): [CHK-4223] add commons to verification metadata

* chore(deps): [CHK-4223] update checksums

* chore(deps): [CHK-4223] ad